gccida/c1/cselib_lookup
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_lookup/src/cselib.c:1341:36: error: must use 'enum' tag to refer to type 'machine_mode'
cselib_val * cselib_lookup( rtx x, machine_mode mode, int create) 
                                   ^
                                   enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_lookup/src/cselib.c:1344:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v6; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_lookup/src/cselib.c:1374:7: error: use of undeclared identifier 'hash_table_0'; did you mean 'hash_table'?
v13 = hash_table_0; 
      ^~~~~~~~~~~~
      hash_table
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_lookup/src/cselib.c:82:15: note: 'hash_table' declared here
static htab_t hash_table;
              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_lookup/src/cselib.c:1376:61: error: use of undeclared identifier 'insert_option'
slot_with_hash = htab_find_slot_with_hash( v13, v14, v12, ( insert_option)( create != 0)); 
                                                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_lookup/src/cselib.c:1420:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v10 = ( ( unsigned int)( mode_class_0[mode] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_lookup/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_lookup/src/cselib.c:1448:28: error: use of undeclared identifier 'hash_table_0'; did you mean 'hash_table'?
*htab_find_slot_with_hash( hash_table_0, x, v7->value, INSERT) = v7; 
                           ^~~~~~~~~~~~
                           hash_table
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_lookup/src/cselib.c:82:15: note: 'hash_table' declared here
static htab_t hash_table;
              ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_lookup/src/obj/cselib.o] Error 1
